--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.0.2",
     "@clerk/themes": "^2.1.39",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@stream-io/node-sdk": "^0.4.4",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
